--- a/eWallet.Backend/eWallet.Backend/Views/Shared/_Layout.cshtml
+++ b/eWallet.Backend/eWallet.Backend/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Customer Profile", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Customer Profile", "Index", "Profile")</li>
                     <li>@Html.ActionLink("Finance Accounts", "Index", "FinanceAccount")</li>
                     <li>
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Operation <span class="caret"></span></a>
