--- a/eWallet.Backend/eWallet.Backend/Views/Home/Index.cshtml
+++ b/eWallet.Backend/eWallet.Backend/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="jumbotron">
     <h1>eWallet System</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
+    <p class="lead">eWallet Operation System: System Configuration, Transaction Monitor, Operation Request Process, Customer Management and Finance Accouting.</p>
 </div>
 
 <div class="row">
