--- a/eWallet.Backend/eWallet.Backend/Views/Profile/Index.cshtml
+++ b/eWallet.Backend/eWallet.Backend/Views/Profile/Index.cshtml
@@ -14,6 +14,8 @@
                 List Profile
             </a>
         </div>
+        <input id="keyword" type="text" placeholder="key word" />
+        <a href="#" class="list-group-item" data-href='@Url.Action("ResultProfile", "Profile", null, null)'>tim thu</a>
     </div>
     <div id="main_content" class="col-sm-9">
 
