--- a/eWallet.Backend/eWallet.Backend/Views/Box/CustomerProfile_ListProfile.cshtml
+++ b/eWallet.Backend/eWallet.Backend/Views/Box/CustomerProfile_ListProfile.cshtml
@@ -1,19 +1,62 @@
 ﻿@{
     Layout = null;
 }
+<style>
+    .filterable {
+        /*margin-top: 15px;*/
+    }
+
+        .filterable .panel-heading .pull-right {
+            margin-top: -20px;
+        }
+
+        .filterable .filters input[disabled] {
+            background-color: transparent;
+            border: none;
+            cursor: auto;
+            box-shadow: none;
+            padding: 0;
+            height: auto;
+        }
+
+            .filterable .filters input[disabled]::-webkit-input-placeholder {
+                color: #333;
+            }
+
+            .filterable .filters input[disabled]::-moz-placeholder {
+                color: #333;
+            }
+
+            .filterable .filters input[disabled]:-ms-input-placeholder {
+                color: #333;
+            }
+</style>
+<div>
+    <div class="row">
+        <div class="panel panel-primary filterable">
+            <div class="panel-heading">
+                <h3 class="panel-title">Users</h3>
+                <div class="pull-right">
+                    <button class="btn btn-default btn-xs btn-filter"><span class="glyphicon glyphicon-filter"></span> Filter</button>
+                </div>
+            </div>
+            <table class="table">
+                <thead>
+                    <tr class="filters">
+                        <th><input type="text" class="form-control" placeholder="#" disabled></th>
+                        <th><input type="text" class="form-control" placeholder="Tài khoản" disabled></th>
+                        <th><input type="text" class="form-control" placeholder="Họ Tên" disabled></th>
+                        <th><input type="text" class="form-control" placeholder="SDT" disabled></th>
+                        <th><input type="text" class="form-control" placeholder="Địa Chỉ" disabled></th>
+                        <th><input type="text" class="form-control" placeholder="Ngày Cấp" disabled></th>
+                        <td><button id="search" class="list-group-item"></button></td>
+                    </tr>
+                </thead>
+            </table>
+        </div>
+    </div>
+</div>
 <table class="table table-striped table-hover ">
-    <thead>
-        <tr>
-            <th>#</th>
-            <th>Tài khoản</th>
-            <th>Họ Tên</th>
-            <th>SDT</th>
-            <th>Địa Chỉ</th>
-            <th>Số CMND</th>
-            <th>Ngày Cấp</th>
-            <th>Trạng Thái</th>
-        </tr>
-    </thead>
     <tbody id="table_body"></tbody>
 </table>
 
@@ -29,6 +72,50 @@
     <li>Next</li>
 </ul>
 
+<script>
+    $(document).ready(function () {
+        $('.filterable .btn-filter').click(function () {
+            var $panel = $(this).parents('.filterable'),
+            $filters = $panel.find('.filters input'),
+            $tbody = $panel.find('.table tbody');
+            if ($filters.prop('disabled') == true) {
+                $filters.prop('disabled', false);
+                $filters.first().focus();
+            } else {
+                $filters.val('').prop('disabled', true);
+                $tbody.find('.no-result').remove();
+                $tbody.find('tr').show();
+            }
+        });
+
+        $('.filterable .filters input').keyup(function (e) {
+            /* Ignore tab key */
+            var code = e.keyCode || e.which;
+            if (code == '9') return;
+            /* Useful DOM data and selectors */
+            var $input = $(this),
+            inputContent = $input.val().toLowerCase(),
+            $panel = $input.parents('.filterable'),
+            column = $panel.find('.filters th').index($input.parents('th')),
+            $table = $panel.find('.table'),
+            $rows = $table.find('tbody tr');
+            /* Dirtiest filter function ever ;) */
+            var $filteredRows = $rows.filter(function () {
+                var value = $(this).find('td').eq(column).text().toLowerCase();
+                return value.indexOf(inputContent) === -1;
+            });
+            /* Clean previous no-result if exist */
+            $table.find('tbody .no-result').remove();
+            /* Show all rows, hide filtered ones (never do that outside of a demo ! xD) */
+            $rows.show();
+            $filteredRows.hide();
+            /* Prepend no-result row if all rows are filtered */
+            if ($filteredRows.length === $rows.length) {
+                $table.find('tbody').prepend($('<tr class="no-result text-center"><td colspan="' + $table.find('.filters th').length + '">No result found</td></tr>'));
+            }
+        });
+    });
+</script>
 <script>
     $(document).ready(function () {
 
