--- a/eWallet.Backend/eWallet.Backend/Views/Box/CustomerProfile_ListProfile.cshtml
+++ b/eWallet.Backend/eWallet.Backend/Views/Box/CustomerProfile_ListProfile.cshtml
@@ -30,6 +30,7 @@
             .filterable .filters input[disabled]:-ms-input-placeholder {
                 color: #333;
             }
+
 </style>
 <div>
     <div class="row">
@@ -43,13 +44,13 @@
             <table class="table">
                 <thead>
                     <tr class="filters">
-                        <th><input type="text" class="form-control" placeholder="#" disabled></th>
-                        <th><input type="text" class="form-control" placeholder="Tài khoản" disabled></th>
-                        <th><input type="text" class="form-control" placeholder="Họ Tên" disabled></th>
-                        <th><input type="text" class="form-control" placeholder="SDT" disabled></th>
-                        <th><input type="text" class="form-control" placeholder="Địa Chỉ" disabled></th>
-                        <th><input type="text" class="form-control" placeholder="Ngày Cấp" disabled></th>
-                        <td><button id="search" class="list-group-item"></button></td>
+                        <th><input id="_id" type="text" class="form-control" placeholder="id" disabled></th>
+                        <th><input id="user_name" type="text" class="form-control" placeholder="Tài khoản" disabled></th>
+                        <th><input id="full_name" type="text" class="form-control" placeholder="Họ Tên" disabled></th>
+                        <th><input id="mobile" type="text" class="form-control" placeholder="SDT" disabled></th>
+                        <th><input id="Personal_Id" type="text" class="form-control" placeholder="Số CMND" disabled></th>
+                        <th><input id="status" type="text" class="form-control" placeholder="Trạng thái" disabled></th>
+                        <th><a href="#" id="SEARCH" class="form-control">Tìm</a></th>
                     </tr>
                 </thead>
             </table>
@@ -57,7 +58,7 @@
     </div>
 </div>
 <table class="table table-striped table-hover ">
-    <tbody id="table_body"></tbody>
+  <tbody id="table_body"></tbody>
 </table>
 
 <ul class="pagination">
@@ -116,6 +117,59 @@
         });
     });
 </script>
+
+@*tim thong tin*@
+<script>
+    $('#SEARCH').click(function () {
+        //alert('Clicked');
+        $User_name = $('#user_name').val();
+        $Full_Name = $('#full_name').val();
+        $mobile = $('#mobile').val();
+        $Personal_Id = $('#Personal_Id').val();
+        $status = $('#status').val();
+        $_Id = $('#_id').val();
+        var page;
+        
+            $.ajax({
+                url: '@Url.Action("JsonResult", "Profile")',
+                contentType: 'application/json; charset=utf-8',
+                type: 'GET',
+                dataType: 'json',
+                data: { _id: $_Id, user_name: $User_name, full_name: $Full_Name, personal_id: $Personal_Id, mobile: $mobile, status: $status, page: page, page_size: 20 },
+                timeout: 30000
+            })
+               .success(function (result) {
+                    if (page == 0) {
+                          $(".pagination").easyPaging(result.total, { // make 1337 elements navigatable
+                           perpage: 20, // show 10 elements per page
+                           lapping: 0, // don't overlap pages for the moment
+                           page: 1, // start at page, can also be "null" or negative
+                           onSelect: function (next_page) {
+                               loadPage(next_page);
+                           }
+                       });
+                   }
+                   $('#table_body').html('');
+                   $.each(result.list, function (i, val) {
+                       $strRow = "<tr>"
+                       + "<td><a href='Profile/ViewProfile/" + val._id + "'>" + val._id + "</a></td>"
+                       + "<td>" + val.user_name + "</td>"
+                       + "<td>" + val.full_name + "</td>"
+                       + "<td>" + val.mobile + "</td>"
+                       + "<td>" + val.personal_id + "</td>"
+                       + "<td>" + val.status + "</td>"
+                       + "</tr>";
+                       $('#table_body').append($strRow);
+                   });
+               })
+               .error(function (xhr, status) {
+                   NProgress.done();
+                   alert("Không thể load dữ liệu. Vui lòng thử lại sau!");
+               });
+
+    })
+</script>
+
 <script>
     $(document).ready(function () {
 
@@ -148,9 +202,7 @@
                        + "<td>" + val.user_name + "</td>"
                        + "<td>" + val.full_name + "</td>"
                        + "<td>" + val.mobile + "</td>"
-                       + "<td>" + val.address + "</td>"
                        + "<td>" + val.personal_id + "</td>"
-                       + "<td>" + val.personal_id_issued_date + "</td>"
                        + "<td>" + val.status + "</td>"
                        + "</tr>";
                        $('#table_body').append($strRow);
