--- a/eWallet.Backend/eWallet.Backend/Views/FinanceAccount/Index.cshtml
+++ b/eWallet.Backend/eWallet.Backend/Views/FinanceAccount/Index.cshtml
@@ -18,7 +18,7 @@
             </a>
         </div>
     </div>
-    <div id="main_content" class="col-sm-9">
+    <div id="main_content" class="col-lg-10" style="margin-top:10px;margin-bottom:30px; margin-left:70px">
 
     </div>
 </div>
