--- a/eWallet.Backend/eWallet.Backend/Views/Shared/_Layout.cshtml
+++ b/eWallet.Backend/eWallet.Backend/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Customer Profile", "Index", "Profile")</li>
+                    <li>@Html.ActionLink("Billing info", "Index", "Billinginfo")</li>
                     <li>@Html.ActionLink("Finance Accounts", "Index", "FinanceAccount")</li>
                     <li>
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Operation <span class="caret"></span></a>
