--- a/eWallet.Backend/eWallet.Backend/Views/Box/FinanceAccount_ListTransactions.cshtml
+++ b/eWallet.Backend/eWallet.Backend/Views/Box/FinanceAccount_ListTransactions.cshtml
@@ -64,7 +64,7 @@
         </div>
     </div>
 </div>
-<table class="table table-striped table-hover ">
+<table class="table table-striped table-hover " style="font-size:14px">
     <tbody id="table_body"></tbody>
 </table>
 
