--- a/eWallet.Backend/eWallet.Backend/Views/Box/Setting_PartnerChannelAPI.cshtml
+++ b/eWallet.Backend/eWallet.Backend/Views/Box/Setting_PartnerChannelAPI.cshtml
@@ -3,7 +3,7 @@
     
 }
 <h3>Partner Integration API</h3>
-<table class="table table-striped table-hover ">
+<table class="table table-striped table-hover " style="font-size:14px">
     <thead>
         <tr>
             <th>#</th>
@@ -12,7 +12,7 @@
             <th>Status</th>
             @*<th>Gateway</th>*@
             @*<th>Success Return</th>
-            <th>Fail Return</th>*@
+                <th>Fail Return</th>*@
             <th>Action</th>
         </tr>
     </thead>
@@ -26,7 +26,7 @@
                 <td>@chn.status</td>
                 @*<td>@chn.gateway_url</td>*@
                 @*<td>@chn.url_success</td>
-                <td>@chn.url_fail</td>*@
+                    <td>@chn.url_fail</td>*@
                 <td>
                     <a title="Cập nhật" href="#"><i class="glyphicon glyphicon-edit"> </i></a>
                     <a title="Xóa" href="#"><i class="glyphicon glyphicon-remove"> </i></a>
