--- a/eWallet.Backend/eWallet.Backend/Views/Box/Account_ProfileManagement.cshtml
+++ b/eWallet.Backend/eWallet.Backend/Views/Box/Account_ProfileManagement.cshtml
@@ -8,7 +8,6 @@
             <th>#</th>
             <th>User Name</th>
             <th>Roles</th>
-            <th>Type User</th>
             <th>Status</th>
             <th>Action</th>
         </tr>
@@ -43,6 +42,8 @@
                             <select id="confirm-type" class="form-control">
                                 <option value="SysCoreAdmin">SysCoreAdmin</option>
                                 <option value="User">User</option>
+                                <option value="GNC">GNC</option>
+                                <option value="CUSTOMER">CUSTOMER</option>
                             </select>
                         </div>
                     </div>
@@ -86,36 +87,7 @@
         </div>
     </div>
 </div>
-@*cập nhật phân loại*@
-<div id="confirmModal3" class="modal fade">
-    <div id="bank-overlay" class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
-                <h4 class="modal-title" id="myModalLabel">Cập Nhập Phân Loại User !</h4>
-            </div>
-            <div class="modal-body">
-                <input type="text" id="request_id3" hidden/>
-                <div class="form-horizontal">
-                    <div class="form-group">
-                        <label for="confirm-type" class="col-sm-3 control-label">Phân loại User</label>
-                        <div class="col-sm-9">
-                            <select id="confirm-type3" class="form-control">
-                                <option value="GNC">GNC</option>
-                                <option value="CUSTOMER">CUSTOMER</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-sm-offset-3 col-sm-9">
-                            <button type="button" id="btn-confirm3" class="btn btn-primary">Cập nhật !</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+
 <script>
     $(document).ready(function () {
         loadPage(0);
@@ -139,6 +111,7 @@
             alert("Không thể load dữ liệu. Vui lòng thử lại sau!");
         });
         });
+
         //update khóa user
         $('#btn-confirm2').click(function () {
             $.ajax({
@@ -159,27 +132,7 @@
             alert("Không thể load dữ liệu. Vui lòng thử lại sau!");
         });
         });
-
-        //update phân loại user
-        $('#btn-confirm3').click(function () {
-            $.ajax({
-                url: '@Url.Action("UpdateOrganization", "Account")',
-                contentType: 'application/json; charset=utf-8',
-                type: 'GET',
-                dataType: 'json',
-                data: { _id: $('#request_id3').val(), Organization_code: $('#confirm-type3').val() },
-                timeout: 30000
-            })
-               .success(function (result) {
-                   alert(result.error_message);
-                   $('#confirmModal').modal('hide');
-                   location.reload();
-               })
-        .error(function (xhr, status) {
-            NProgress.done();
-            alert("Không thể load dữ liệu. Vui lòng thử lại sau!");
-        });
-        });
+       
         function loadPage(page) {
             $.ajax({
                 url: '@Url.Action("RolesResult", "Account")',
@@ -205,14 +158,12 @@
                        $action = "";
                        $action = "<a href='#confirmModal' data-toggle='modal'  class='confirm-btn glyphicon glyphicon-edit' data-request='" + val._id + "'></a>";
                        $action2 = "<a href='#confirmModal2' data-toggle='modal'  class='confirm-btn glyphicon glyphicon-remove' data-request='" + val._id + "'></a>";
-                       $action3 = "<a href='#confirmModal3' data-toggle='modal'  class='confirm-btn glyphicon glyphicon-exclamation-sign' data-request='" + val._id + "'></a>";
                        $strRow = "<tr>"
                        + "<td>" + val._id + "</td>"
                        + "<td>" + val.UserName + "</td>"
                        + "<td>" + val.Roles + "</td>"
-                       + "<td>" + val.Organization_code + "</td>"
                        + "<td>" + val.Status + "</td>"
-                       + "<td>" + $action + "&nbsp &nbsp" + $action3 + "&nbsp &nbsp" + $action2 + "</td>"
+                       + "<td>" + $action + "&nbsp &nbsp" + $action2 + "</td>"
                        + "</tr>";
                        $('#table_body').append($strRow);
                    });
@@ -222,9 +173,6 @@
                    })
                    $('.confirm-btn').click(function () {
                        $('#request_id2').val($(this).data("request"));
-                   })
-                   $('.confirm-btn').click(function () {
-                       $('#request_id3').val($(this).data("request"));
                    })
                })
         .error(function (xhr, status) {
