--- a/eWallet.Backend/eWallet.Backend/Views/Box/Account_RoleManagement.cshtml
+++ b/eWallet.Backend/eWallet.Backend/Views/Box/Account_RoleManagement.cshtml
@@ -2,7 +2,7 @@
     Layout = null;
 }
 <h3>Core Channel API</h3>
-<table class="table table-striped table-hover ">
+<table class="table table-striped table-hover " style="font-size:14px">
     <thead>
         <tr>
             <th>#</th>
