--- a/eWallet.Backend/eWallet.Backend/Views/Box/Billing_info.cshtml
+++ b/eWallet.Backend/eWallet.Backend/Views/Box/Billing_info.cshtml
@@ -57,7 +57,7 @@
         </div>
     </div>
 </div>
-<table class="table table-striped table-hover ">
+<table class="table table-striped table-hover " style="font-size:14px">
     <tbody id="table_body"></tbody>
 </table>
 
