--- a/eWallet.Backend/eWallet.Backend/Views/Box/CustomerProfile_ListProfile.cshtml
+++ b/eWallet.Backend/eWallet.Backend/Views/Box/CustomerProfile_ListProfile.cshtml
@@ -57,8 +57,8 @@
         </div>
     </div>
 </div>
-<table class="table table-striped table-hover ">
-  <tbody id="table_body"></tbody>
+<table class="table table-striped table-hover " style="font-size:14px">
+    <tbody id="table_body"></tbody>
 </table>
 
 <ul class="pagination">
