--- a/eWallet.Backend/eWallet.Backend/Views/Box/FinanceAccount_ChartOfAccount.cshtml
+++ b/eWallet.Backend/eWallet.Backend/Views/Box/FinanceAccount_ChartOfAccount.cshtml
@@ -2,7 +2,7 @@
     Layout = null;
 }
 <h3>Chart Of Accounts</h3>
-<table class="table table-striped table-hover ">
+<table class="table table-striped table-hover " style="font-size:14px">
     <thead>
         <tr>
             <th>#</th>
@@ -12,8 +12,7 @@
             <th>Sub Accounts</th>
         </tr>
     </thead>
-    <tbody id="table_body">
-    </tbody>
+    <tbody id="table_body"></tbody>
 </table>
 <ul class="pagination">
     <li>Prev</li>
