--- a/eWallet.Backend/eWallet.Backend/Views/Box/FinanceAccount_TransactionConfig.cshtml
+++ b/eWallet.Backend/eWallet.Backend/Views/Box/FinanceAccount_TransactionConfig.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     Layout = null;
 }
-<table class="table table-striped table-hover ">
+<table class="table table-striped table-hover " style="font-size:14px">
     <thead>
         <tr>
             <th>Channel</th>
