--- a/eWallet.Backend/eWallet.Backend/Views/Shared/_Layout.cshtml
+++ b/eWallet.Backend/eWallet.Backend/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jquerypag")
+
 </head>
 <body>
     <div class="navbar navbar-default navbar-fixed-top">
@@ -18,7 +19,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("eWallet Operation", "Index", "Home", null, new { @class = "navbar-brand" })
+                @*@Html.ActionLink("eWallet Operation", "Index", "Home", null, new { @class = "logo" })navbar-brand*@
+                <a href='@Url.Action("Index", "Home")' style="padding-bottom:-10px;">
+                    <img src='@Url.Content("~/logo.png")' />
+                </a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
