--- a/eWallet.Backend/eWallet.Backend/Views/Box/Billing_info.cshtml
+++ b/eWallet.Backend/eWallet.Backend/Views/Box/Billing_info.cshtml
@@ -4,6 +4,7 @@
 <style>
     .filterable {
         /*margin-top: 15px;*/
+        width:910px;
     }
 
         .filterable .panel-heading .pull-right {
