--- a/eWallet.Backend/eWallet.Backend/Views/Transaction/Search.cshtml
+++ b/eWallet.Backend/eWallet.Backend/Views/Transaction/Search.cshtml
@@ -5,6 +5,7 @@
 <style>
     .filterable {
         /*margin-top: 15px;*/
+        width:1240px;
     }
 
         .filterable .panel-heading .pull-right {
@@ -70,7 +71,7 @@
 </div>
 
 <div class="row">
-    <table class="table table-striped table-hover ">
+    <table class="table table-striped table-hover " style="width:1200px;font-size:14px; text-align:left;">
         <tbody id="table_body"></tbody>
     </table>
 
