--- a/eWallet.Backend/eWallet.Backend/Views/Box/FinanceAccount_ListAccounts.cshtml
+++ b/eWallet.Backend/eWallet.Backend/Views/Box/FinanceAccount_ListAccounts.cshtml
@@ -4,6 +4,8 @@
 <style>
     .filterable {
         /*margin-top: 15px;*/
+        margin-left:150px;
+        width:1040px;
     }
 
         .filterable .panel-heading .pull-right {
@@ -55,9 +57,12 @@
         </div>
     </div>
 </div>
-<table class="table table-striped table-hover " style="font-size:14px">
-    <tbody id="table_body"></tbody>
-</table>
+<center>
+    <table class="table table-striped table-hover " style="width:960px;font-size:14px; text-align:left; margin-left:135px">
+        <tbody id="table_body"></tbody>
+    </table>
+</center>
+
 <ul class="pagination">
     <li>Prev</li>
     <li>Page #n</li>
