--- a/eWallet.Backend/eWallet.Backend/Views/Box/FinanceAccount_ListTransactions.cshtml
+++ b/eWallet.Backend/eWallet.Backend/Views/Box/FinanceAccount_ListTransactions.cshtml
@@ -10,6 +10,8 @@
     }
     .filterable {
         /*margin-top: 15px;*/
+        margin-left:150px;
+        width:1040px;
     }
 
         .filterable .panel-heading .pull-right {
@@ -64,7 +66,7 @@
         </div>
     </div>
 </div>
-<table class="table table-striped table-hover " style="font-size:14px">
+<table class="table table-striped table-hover " style="width:960px;font-size:14px; text-align:left; margin-left:135px">
     <tbody id="table_body"></tbody>
 </table>
 
